--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,15 @@
-<p>
-  search works!
-</p>
+
+<div class="container top-30">
+  <div class="row">
+
+    <div class="col-md-3">
+      <label for="termino">Buscador de artistas</label>
+       <input [(ngModel)]="termino" (keyup)="buscarArtista()" type="text" name="termino" placeholder="Buscar por artista..." class="form-control">
+        <hr>
+
+
+    </div>
+
+  </div>
+
+  </div>
