Manejo de artistas por RouterLink y pipes en las imagenes

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -6,7 +6,25 @@
       <label for="termino">Buscador de artistas</label>
        <input [(ngModel)]="termino" (keyup)="buscarArtista()" type="text" name="termino" placeholder="Buscar por artista..." class="form-control">
         <hr>
+    </div>
 
+    <div class="col-md-9">
+      <!-- <ul>
+        <li *ngFor="let artista of _spotifyService.artistas">
+          {{artista.name}}
+        </li>
+        </ul>
+      -->
+        <div class="row">
+          <div class="col-md-3 text-center puntero"
+            [routerLink]="['/artista', artista.id]"
+           *ngFor="let artista of _spotifyService.artistas">
+            <img [src]="artista.images | sinfoto"  class="img-fluid img-thumbnail">
+            <p>
+              {{artista.name}}
+            </p>
+          </div>
+        </div>
 
     </div>
 
